chore: Gradle -> Maven, Java -> Java1.8